# RTSExperimentalProject

./: Cargo.toml  README.md
assets/buildings/: Autoturret.glb  LogisticHub.glb  Pillbox.glb  ResourceExtractor.glb  Watching_tower.glb
assets/landscape/: Terrain.glb  trees2d.glb  trees3d.glb
assets/other/: Shell.glb
assets/shaders/: team_shader.wgsl  terrain_material_shader — копия.wgsl  terrain_material_shader.wgsl
assets/units/: Artillery.glb  Corpse.glb  IFV.glb  Soldier.glb  Soldier_ATGM.glb  Soldier_RPG.glb  Soldier_assault.glb  Soldier_sniper.glb  Tank.glb  Truck.glb  engineer.glb
src/: main.rs
src/components/: asset_manager.rs  building.rs  camera.rs  logistics.rs  mod.rs  network.rs  ui_manager.rs  unit.rs
