[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features=["jpeg", "tonemapping_luts"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }


rand = "0.8.5"
bevy_mod_raycast = "0.18.0"
bevy_rapier3d = "0.27.0"
oxidized_navigation_serializable = { git = "https://github.com/ShoulinSS/oxidized_navigation_serializable", features = ["rapier", "debug_draw"]}
bevy_tasks = "0.14.0"
bevy_egui = "0.30"
bevy_quinnet = "0.11"
serde = "1.0.219"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"